minor tweaks for problems found in Cray/Jaguar

--- a/test/src/test.attach_4_shutdownbe.in
+++ b/test/src/test.attach_4_shutdownbe.in
@@ -49,6 +49,7 @@ NUMTASKS=`expr $NUMNODES \* @SMP@`
 WAITAMOUNT=$NUMNODES 
 SIGNUM=10
 MPI_JOB_LAUNCHER_PATH=@TJLPATH@
+export LMON_PREFIX=@LMONPREFIX@
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
 export LMON_FE_SHUTDOWNBE_TEST=1
 
