--- a/test/src/test.launch_1_remote.in
+++ b/test/src/test.launch_1_remote.in
@@ -54,6 +54,7 @@ fi
 
 NUMTASKS=`expr $NUMNODES \* @SMP@`
 
+export LMON_PREFIX=@LMONPREFIX
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@ 
 export FEN_RM_DISTRIBUTED=1
 
