--- a/test/src/test.launch_5_usrpayload.in
+++ b/test/src/test.launch_5_usrpayload.in
@@ -47,6 +47,7 @@ fi
 
 NUMTASKS=`expr $NUMNODES \* @SMP@`
 
+export LMON_PREFIX=@LMONPREFIX@
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
 
 $NOHUP fe_launch_usrpayload_test@EXE@ `pwd`/simple_MPI@EXE@ $NUMTASKS $NUMNODES pdebug `pwd`/be_kicker_usrpayload_test@EXE@
