--- a/test/src/test.launch_6_engine_failure.in
+++ b/test/src/test.launch_6_engine_failure.in
@@ -45,6 +45,7 @@ fi
 NUMTASKS=`expr $NUMNODES \* @SMP@`
 SIGNUM=18
 
+export LMON_PREFIX=@LMONPREFIX
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
 export LMON_ADDITIONAL_FE_STALL=1
 export LMON_STATUS_CB_TEST=1
