--- a/test/src/test.attach_4_kill.in
+++ b/test/src/test.attach_4_kill.in
@@ -53,6 +53,7 @@ if test $NUMNODES -lt 10 ; then
 fi
 SIGNUM=10
 MPI_JOB_LAUNCHER_PATH=@TJLPATH@
+export LMON_PREFIX=@LMONPREFIX@
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
 export LMON_FE_KILL_TEST=1
 
