--- a/test/src/test.launch_2_uneven.in
+++ b/test/src/test.launch_2_uneven.in
@@ -45,9 +45,10 @@ if test "x$RM_TYPE" = "xbgrm" ; then
 fi
 
 NUMTASKS=`expr $NUMNODES \* @SMP@ / 2 + 2`
-                                                                                                                                               
+
+export LMON_PREFIX=@LMONPREFIX@
 export LMON_LAUNCHMON_ENGINE_PATH=@LMON@
-                                                                                                                                               
+                                       
 $NOHUP fe_launch_smoketest@EXE@ `pwd`/simple_MPI@EXE@ $NUMTASKS $NUMNODES pdebug `pwd`/be_kicker@EXE@
 
 if test -f nohup.out; then
