--- a/test/src/Makefile.in
+++ b/test/src/Makefile.in
@@ -38,7 +38,7 @@ POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
 @WITH_CIOD_TRUE@am__append_1 = -I@ARCHHEADER@ -I$(top_srcdir)/@CIODLOC@
-bin_PROGRAMS = fe_jobsnap$(EXEEXT) be_jobsnap$(EXEEXT) \
+test_PROGRAMS = fe_jobsnap$(EXEEXT) be_jobsnap$(EXEEXT) \
 	LE_model_checker$(EXEEXT) fe_launch_smoketest$(EXEEXT) \
 	fe_launch_usrpayload_test$(EXEEXT) \
 	fe_attach_smoketest$(EXEEXT) be_kicker$(EXEEXT) \
@@ -63,9 +63,9 @@ am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 mkinstalldirs = $(install_sh) -d
 CONFIG_HEADER = $(top_builddir)/config.h
 CONFIG_CLEAN_FILES =
-am__installdirs = "$(DESTDIR)$(bindir)" "$(DESTDIR)$(bindir)"
-binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
-PROGRAMS = $(bin_PROGRAMS)
+am__installdirs = "$(DESTDIR)$(testdir)" "$(DESTDIR)$(testdir)"
+testPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
+PROGRAMS = $(test_PROGRAMS)
 am_LE_model_checker_OBJECTS =  \
 	LE_model_checker-LE_model_checker.$(OBJEXT)
 LE_model_checker_OBJECTS = $(am_LE_model_checker_OBJECTS)
@@ -116,8 +116,8 @@ run_3mins_LDADD = $(LDADD)
 simple_MPI_SOURCES = simple_MPI.c
 simple_MPI_OBJECTS = simple_MPI.$(OBJEXT)
 simple_MPI_LDADD = $(LDADD)
-binSCRIPT_INSTALL = $(INSTALL_SCRIPT)
-SCRIPTS = $(bin_SCRIPTS)
+testSCRIPT_INSTALL = $(INSTALL_SCRIPT)
+SCRIPTS = $(test_SCRIPTS)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/config/depcomp
 am__depfiles_maybe = depfiles
@@ -293,6 +293,7 @@ tvcmd = @tvcmd@
 INCLUDES = -I$(top_srcdir)/launchmon/src -I$(top_srcdir)/@LMONAPILOC@ \
 	-I$(top_srcdir)/@GCRYPTLOC@ -I$(top_srcdir)/@GPGERRLOC@ \
 	$(am__append_1)
+testdir = ${pkgdatadir}/tests
 LE_model_checker_SOURCES = LE_model_checker.c
 LE_model_checker_CFLAGS = @LNCHR_BIT_FLAGS@ $(AM_CFLAGS)
 LE_model_checker_CXXFLAGS = @LNCHR_BIT_FLAGS@ $(AM_CXXFLAGS)
@@ -342,7 +343,7 @@ be_jobsnap_CFLAGS = $(AM_CFLAGS)
 be_jobsnap_CXXFLAGS = $(AM_CXXFLAGS)
 be_jobsnap_LDFLAGS = -L$(top_srcdir)/@LMONAPILOC@
 be_jobsnap_LDADD = -lmonbeapi
-bin_SCRIPTS = test.LE_model_checker_mainthread \
+test_SCRIPTS = test.LE_model_checker_mainthread \
 				    test.LE_model_checker_pthread \
 			            test.LE_model_checker_large \
 				    test.LE_model_checker_extreme \
@@ -366,7 +367,7 @@ bin_SCRIPTS = test.LE_model_checker_mainthread \
 				    test.fe_regErrorCB \
 				    test.fe_regStatusCB
 
-CLEANFILES = $(bin_SCRIPTS)
+CLEANFILES = $(test_SCRIPTS)
 EXTRA_DIST = test.LE_model_checker_mainthread.in \
                                     test.LE_model_checker_pthread.in \
                                     test.LE_model_checker_large.in \
@@ -432,30 +433,30 @@ $(top_srcdir)/configure:  $(am__configure_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
 $(ACLOCAL_M4):  $(am__aclocal_m4_deps)
 	cd $(top_builddir) && $(MAKE) $(AM_MAKEFLAGS) am--refresh
-install-binPROGRAMS: $(bin_PROGRAMS)
+install-testPROGRAMS: $(test_PROGRAMS)
 	@$(NORMAL_INSTALL)
-	test -z "$(bindir)" || $(mkdir_p) "$(DESTDIR)$(bindir)"
-	@list='$(bin_PROGRAMS)'; for p in $$list; do \
+	test -z "$(testdir)" || $(mkdir_p) "$(DESTDIR)$(testdir)"
+	@list='$(test_PROGRAMS)'; for p in $$list; do \
 	  p1=`echo $$p|sed 's/$(EXEEXT)$$//'`; \
 	  if test -f $$p \
 	     || test -f $$p1 \
 	  ; then \
 	    f=`echo "$$p1" | sed 's,^.*/,,;$(transform);s/$$/$(EXEEXT)/'`; \
-	   echo " $(INSTALL_PROGRAM_ENV) $(LIBTOOL) --mode=install $(binPROGRAMS_INSTALL) '$$p' '$(DESTDIR)$(bindir)/$$f'"; \
-	   $(INSTALL_PROGRAM_ENV) $(LIBTOOL) --mode=install $(binPROGRAMS_INSTALL) "$$p" "$(DESTDIR)$(bindir)/$$f" || exit 1; \
+	   echo " $(INSTALL_PROGRAM_ENV) $(LIBTOOL) --mode=install $(testPROGRAMS_INSTALL) '$$p' '$(DESTDIR)$(testdir)/$$f'"; \
+	   $(INSTALL_PROGRAM_ENV) $(LIBTOOL) --mode=install $(testPROGRAMS_INSTALL) "$$p" "$(DESTDIR)$(testdir)/$$f" || exit 1; \
 	  else :; fi; \
 	done
 
-uninstall-binPROGRAMS:
+uninstall-testPROGRAMS:
 	@$(NORMAL_UNINSTALL)
-	@list='$(bin_PROGRAMS)'; for p in $$list; do \
+	@list='$(test_PROGRAMS)'; for p in $$list; do \
 	  f=`echo "$$p" | sed 's,^.*/,,;s/$(EXEEXT)$$//;$(transform);s/$$/$(EXEEXT)/'`; \
-	  echo " rm -f '$(DESTDIR)$(bindir)/$$f'"; \
-	  rm -f "$(DESTDIR)$(bindir)/$$f"; \
+	  echo " rm -f '$(DESTDIR)$(testdir)/$$f'"; \
+	  rm -f "$(DESTDIR)$(testdir)/$$f"; \
 	done
 
-clean-binPROGRAMS:
-	@list='$(bin_PROGRAMS)'; for p in $$list; do \
+clean-testPROGRAMS:
+	@list='$(test_PROGRAMS)'; for p in $$list; do \
 	  f=`echo $$p|sed 's/$(EXEEXT)$$//'`; \
 	  echo " rm -f $$p $$f"; \
 	  rm -f $$p $$f ; \
@@ -487,24 +488,24 @@ fe_launch_smoketest$(EXEEXT): $(fe_launch_smoketest_OBJECTS) $(fe_launch_smokete
 fe_launch_usrpayload_test$(EXEEXT): $(fe_launch_usrpayload_test_OBJECTS) $(fe_launch_usrpayload_test_DEPENDENCIES) 
 	@rm -f fe_launch_usrpayload_test$(EXEEXT)
 	$(CXXLINK) $(fe_launch_usrpayload_test_LDFLAGS) $(fe_launch_usrpayload_test_OBJECTS) $(fe_launch_usrpayload_test_LDADD) $(LIBS)
-install-binSCRIPTS: $(bin_SCRIPTS)
+install-testSCRIPTS: $(test_SCRIPTS)
 	@$(NORMAL_INSTALL)
-	test -z "$(bindir)" || $(mkdir_p) "$(DESTDIR)$(bindir)"
-	@list='$(bin_SCRIPTS)'; for p in $$list; do \
+	test -z "$(testdir)" || $(mkdir_p) "$(DESTDIR)$(testdir)"
+	@list='$(test_SCRIPTS)'; for p in $$list; do \
 	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
 	  if test -f $$d$$p; then \
 	    f=`echo "$$p" | sed 's|^.*/||;$(transform)'`; \
-	    echo " $(binSCRIPT_INSTALL) '$$d$$p' '$(DESTDIR)$(bindir)/$$f'"; \
-	    $(binSCRIPT_INSTALL) "$$d$$p" "$(DESTDIR)$(bindir)/$$f"; \
+	    echo " $(testSCRIPT_INSTALL) '$$d$$p' '$(DESTDIR)$(testdir)/$$f'"; \
+	    $(testSCRIPT_INSTALL) "$$d$$p" "$(DESTDIR)$(testdir)/$$f"; \
 	  else :; fi; \
 	done
 
-uninstall-binSCRIPTS:
+uninstall-testSCRIPTS:
 	@$(NORMAL_UNINSTALL)
-	@list='$(bin_SCRIPTS)'; for p in $$list; do \
+	@list='$(test_SCRIPTS)'; for p in $$list; do \
 	  f=`echo "$$p" | sed 's|^.*/||;$(transform)'`; \
-	  echo " rm -f '$(DESTDIR)$(bindir)/$$f'"; \
-	  rm -f "$(DESTDIR)$(bindir)/$$f"; \
+	  echo " rm -f '$(DESTDIR)$(testdir)/$$f'"; \
+	  rm -f "$(DESTDIR)$(testdir)/$$f"; \
 	done
 
 mostlyclean-compile:
@@ -873,7 +874,7 @@ check-am: all-am
 check: check-am
 all-am: Makefile $(PROGRAMS) $(SCRIPTS)
 installdirs:
-	for dir in "$(DESTDIR)$(bindir)" "$(DESTDIR)$(bindir)"; do \
+	for dir in "$(DESTDIR)$(testdir)" "$(DESTDIR)$(testdir)"; do \
 	  test -z "$$dir" || $(mkdir_p) "$$dir"; \
 	done
 install: install-am
@@ -903,7 +904,8 @@ maintainer-clean-generic:
 	@echo "it deletes files that may require special tools to rebuild."
 clean: clean-am
 
-clean-am: clean-binPROGRAMS clean-generic clean-libtool mostlyclean-am
+clean-am: clean-generic clean-libtool clean-testPROGRAMS \
+	mostlyclean-am
 
 distclean: distclean-am
 	-rm -rf ./$(DEPDIR)
@@ -921,9 +923,9 @@ info: info-am
 
 info-am:
 
-install-data-am:
+install-data-am: install-testPROGRAMS install-testSCRIPTS
 
-install-exec-am: install-binPROGRAMS install-binSCRIPTS
+install-exec-am:
 
 install-info: install-info-am
 
@@ -949,21 +951,21 @@ ps: ps-am
 
 ps-am:
 
-uninstall-am: uninstall-binPROGRAMS uninstall-binSCRIPTS \
-	uninstall-info-am
+uninstall-am: uninstall-info-am uninstall-testPROGRAMS \
+	uninstall-testSCRIPTS
 
-.PHONY: CTAGS GTAGS all all-am check check-am clean clean-binPROGRAMS \
-	clean-generic clean-libtool ctags distclean distclean-compile \
-	distclean-generic distclean-libtool distclean-tags distdir dvi \
-	dvi-am html html-am info info-am install install-am \
-	install-binPROGRAMS install-binSCRIPTS install-data \
-	install-data-am install-exec install-exec-am install-info \
-	install-info-am install-man install-strip installcheck \
-	installcheck-am installdirs maintainer-clean \
+.PHONY: CTAGS GTAGS all all-am check check-am clean clean-generic \
+	clean-libtool clean-testPROGRAMS ctags distclean \
+	distclean-compile distclean-generic distclean-libtool \
+	distclean-tags distdir dvi dvi-am html html-am info info-am \
+	install install-am install-data install-data-am install-exec \
+	install-exec-am install-info install-info-am install-man \
+	install-strip install-testPROGRAMS install-testSCRIPTS \
+	installcheck installcheck-am installdirs maintainer-clean \
 	maintainer-clean-generic mostlyclean mostlyclean-compile \
 	mostlyclean-generic mostlyclean-libtool pdf pdf-am ps ps-am \
-	tags uninstall uninstall-am uninstall-binPROGRAMS \
-	uninstall-binSCRIPTS uninstall-info-am
+	tags uninstall uninstall-am uninstall-info-am \
+	uninstall-testPROGRAMS uninstall-testSCRIPTS
 
 
 test.LE_model_checker_mainthread: test.LE_model_checker_mainthread.in Makefile
